5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4466/executions/1633_2940.log
== SUBMITION (2019-04-02 18:40:12) 
-- CODE:
vi = float(input())
j = float(input())
vf = float(input()
n = float(input()


-- EXECUTION TIME:
0.168047
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    n = float(input()
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:14) 
-- CODE:
vi = float(input())
j = float(input())
vf = float(input()
n = float(input()


-- EXECUTION TIME:
0.152052
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    n = float(input()
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:15) 
-- CODE:
vi = float(input())
j = float(input())
vf = float(input()
n = float(input()


-- EXECUTION TIME:
0.13619
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    n = float(input()
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:15) 
-- CODE:
vi = float(input())
j = float(input())
vf = float(input()
n = float(input()


-- EXECUTION TIME:
0.151743
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    n = float(input()
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:16) 
-- CODE:
vi = float(input())
j = float(input())
vf = float(input()
n = float(input()


-- EXECUTION TIME:
0.180531
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    n = float(input()
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:16) 
-- CODE:
vi = float(input())
j = float(input())
vf = float(input()
n = float(input()


-- EXECUTION TIME:
0.181043
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    n = float(input()
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:16) 
-- CODE:
vi = float(input())
j = float(input())
vf = float(input()
n = float(input()


-- EXECUTION TIME:
0.20145
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    n = float(input()
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:16) 
-- CODE:
vi = float(input())
j = float(input())
vf = float(input()
n = float(input()


-- EXECUTION TIME:
0.112321
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    n = float(input()
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:16) 
-- CODE:
vi = float(input())
j = float(input())
vf = float(input()
n = float(input()


-- EXECUTION TIME:
0.137986
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    n = float(input()
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:17) 
-- CODE:
vi = float(input())
j = float(input())
vf = float(input()
n = float(input()


-- EXECUTION TIME:
0.116166
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    n = float(input()
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:17) 
-- CODE:
vi = float(input())
j = float(input())
vf = float(input()
n = float(input()


-- EXECUTION TIME:
0.149226
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    n = float(input()
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:17) 
-- CODE:
vi = float(input())
j = float(input())
vf = float(input()
n = float(input()


-- EXECUTION TIME:
0.168652
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    n = float(input()
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:17) 
-- CODE:
vi = float(input())
j = float(input())
vf = float(input()
n = float(input()


-- EXECUTION TIME:
0.280292
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    n = float(input()
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:17) 
-- CODE:
vi = float(input())
j = float(input())
vf = float(input()
n = float(input()


-- EXECUTION TIME:
0.163652
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1633/2940/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:18) 
-- CODE:
vi = float(input())
j = float(input())
vf = float(input()
n = float(input()


-- EXECUTION TIME:
0.210383
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    n = float(input()
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:18) 
-- CODE:
vi = float(input())
j = float(input())
vf = float(input()
n = float(input()


-- EXECUTION TIME:
0.157414
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    n = float(input()
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:18) 
-- CODE:
vi = float(input())
j = float(input())
vf = float(input()
n = float(input()


-- EXECUTION TIME:
0.125781
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    n = float(input()
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:18) 
-- CODE:
vi = float(input())
j = float(input())
vf = float(input()
n = float(input()


-- EXECUTION TIME:
0.107086
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    n = float(input()
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:18) 
-- CODE:
vi = float(input())
j = float(input())
vf = float(input()
n = float(input()


-- EXECUTION TIME:
0.108795
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    n = float(input()
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:19) 
-- CODE:
vi = float(input())
j = float(input())
vf = float(input()
n = float(input()


-- EXECUTION TIME:
0.157629
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    n = float(input()
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:42:38) 
-- CODE:
vi = float(input())
j = float(input())

n = float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.130259
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 5
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:42:40) 
-- CODE:
vi = float(input())
j = float(input())

n = float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.145668
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 5
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:42:40) 
-- CODE:
vi = float(input())
j = float(input())

n = float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.125072
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 5
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:42:46) 
-- CODE:
vi = float(input())
j = float(input())
n = float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.217249
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:42:47) 
-- CODE:
vi = float(input())
j = float(input())
n = float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.138586
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:42:47) 
-- CODE:
vi = float(input())
j = float(input())
n = float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.130879
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:42:48) 
-- CODE:
vi = float(input())
j = float(input())
n = float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.125058
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:42:48) 
-- CODE:
vi = float(input())
j = float(input())
n = float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.136635
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:10) 
-- CODE:
vi = float(input())
j = float(input())
n = float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.139647
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:10) 
-- CODE:
vi = float(input())
j = float(input())
n = float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.11736
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:11) 
-- CODE:
vi = float(input())
j = float(input())
n = float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.110288
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:11) 
-- CODE:
vi = float(input())
j = float(input())
n = float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.135861
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:11) 
-- CODE:
vi = float(input())
j = float(input())
n = float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.123047
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:11) 
-- CODE:
vi = float(input())
j = float(input())
n = float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.136214
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:12) 
-- CODE:
vi = float(input())
j = float(input())
n = float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.103173
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1633/2940/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:12) 
-- CODE:
vi = float(input())
j = float(input())
n = float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.103215
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:12) 
-- CODE:
vi = float(input())
j = float(input())
n = float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.0907578
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1633/2940/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:12) 
-- CODE:
vi = float(input())
j = float(input())
n = float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.0964651
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1633/2940/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:13) 
-- CODE:
vi = float(input())
j = float(input())
n = float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.099617
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:28) 
-- CODE:
vi=float(input())
j=float(input())
n=float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.133082
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:29) 
-- CODE:
vi=float(input())
j=float(input())
n=float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.11584
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:29) 
-- CODE:
vi=float(input())
j=float(input())
n=float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.149959
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:29) 
-- CODE:
vi=float(input())
j=float(input())
n=float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.128964
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:29) 
-- CODE:
vi=float(input())
j=float(input())
n=float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.130537
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:30) 
-- CODE:
vi=float(input())
j=float(input())
n=float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.140791
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:30) 
-- CODE:
vi=float(input())
j=float(input())
n=float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.168718
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:30) 
-- CODE:
vi=float(input())
j=float(input())
n=float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.189612
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:30) 
-- CODE:
vi=float(input())
j=float(input())
n=float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.176278
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:30) 
-- CODE:
vi=float(input())
j=float(input())
n=float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.239285
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:31) 
-- CODE:
vi=float(input())
j=float(input())
n=float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.126752
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:31) 
-- CODE:
vi=float(input())
j=float(input())
n=float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.199072
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1633/2940/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:31) 
-- CODE:
vi=float(input())
j=float(input())
n=float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.160236
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:31) 
-- CODE:
vi=float(input())
j=float(input())
n=float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.172901
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:31) 
-- CODE:
vi=float(input())
j=float(input())
n=float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.195923
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:32) 
-- CODE:
vi=float(input())
j=float(input())
n=float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.260242
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:32) 
-- CODE:
vi=float(input())
j=float(input())
n=float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.29182
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:32) 
-- CODE:
vi=float(input())
j=float(input())
n=float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.357526
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:32) 
-- CODE:
vi=float(input())
j=float(input())
n=float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.205284
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1633/2940/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:32) 
-- CODE:
vi=float(input())
j=float(input())
n=float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.314045
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:32) 
-- CODE:
vi=float(input())
j=float(input())
n=float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.146553
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:32) 
-- CODE:
vi=float(input())
j=float(input())
n=float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.187892
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:33) 
-- CODE:
vi=float(input())
j=float(input())
n=float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.260703
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:33) 
-- CODE:
vi=float(input())
j=float(input())
n=float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.107199
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:33) 
-- CODE:
vi=float(input())
j=float(input())
n=float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.174159
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1633/2940/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:33) 
-- CODE:
vi=float(input())
j=float(input())
n=float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.139797
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:34) 
-- CODE:
vi=float(input())
j=float(input())
n=float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.168455
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:34) 
-- CODE:
vi=float(input())
j=float(input())
n=float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.172948
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:34) 
-- CODE:
vi=float(input())
j=float(input())
n=float(input()
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.15389
-- ERROR:
  File "/home/codebench/codes/1633/2940/main.py", line 4
    vf=vi*(1+j)**n
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:46) 
-- CODE:
vi=float(input())
j=float(input())
n=float(input())
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.218685
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
24798.08
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
13322.3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:47) 
-- CODE:
vi=float(input())
j=float(input())
n=float(input())
vf=vi*(1+j)**n
print(round(vf,2))


-- EXECUTION TIME:
0.134815
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
24798.08
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
13322.3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
